--- a/recipes/cepelinai.html
+++ b/recipes/cepelinai.html
@@ -33,6 +33,14 @@
         <li>1 1/2 teaspoons kosher salt, more as needed</li>
         <li>1 tablespoon cornstarch </li>
     </ul>
+    <H3>For the Gravy</H3>
+    <ul>
+        <li>1/2 pound bacon, diced</li>
+        <li>1 large onion, coarsely chopped</li>
+        <li>1 cup sour cream </li>
+        <li>Freshly ground black pepper, to taste</li>
+        <li>1 to 2 tablespoons milk, as needed</li>
+    </ul>
 
 </body>
 </html>
