--- a/recipes/cepelinai.html
+++ b/recipes/cepelinai.html
@@ -41,6 +41,8 @@
         <li>Freshly ground black pepper, to taste</li>
         <li>1 to 2 tablespoons milk, as needed</li>
     </ul>
+    <h3>How to make <strong>Cepilinai</strong> video.</h3>
+    <a href="https://www.youtube.com/watch?v=U4MIGb0fwZQ">How to make Cepelinai.</a>
 
 </body>
 </html>
