Add index.html and cepelinai.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
- <a href="./recipes/cepelinai.html">cepelinai</a>
-
+<ul>    
+ <a href="./recipes/cepelinai/cepelinai.html">cepelinai</a>
+</ul>
 
 </body>
 </html>
