--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
 <ul>    
  <a href="./recipes/cepelinai/cepelinai.html">cepelinai</a>
+ <a href="./recipes/saltibarsiai/saltibarsiai.html">šaltibarščiai</a>
 </ul>
-
+    
 </body>
 </html>
