--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Odin Recipes</h1>
 <ul>    
  <a href="./recipes/cepelinai/cepelinai.html">cepelinai</a>
- <a href="./recipes/saltibarsiai/saltibarsiai.html">šaltibarščiai</a>
+ <a href="./recipes/šaltibarsiai/šaltibarščiai.html">šaltibarščiai</a>
+ <a href="./recipes/kugelis/kugelis.html">kugelis</a>
 </ul>
+
     
 </body>
 </html>
