--- a/recipes/cepelinai/cepelinai.html
+++ b/recipes/cepelinai/cepelinai.html
@@ -10,7 +10,7 @@
     <h1>Cepelinai </h1>
     <img src="/recipes/cepelinai/cepelinai-80268533.jpg" alt="Cepelianai">
     <p>
-        Cepelinai or <strong>didzkukuliai</strong> are potato dumplings.
+        <strong>Cepelinai </strong> or <strong>didzkukuliai</strong> are potato dumplings.
         It has been described as a national dish of Lithuania
     </p>
     <h1>Ingredients</h1>
