--- a/recipes/šaltibarsiai/šaltibarščiai.html
+++ b/recipes/šaltibarsiai/šaltibarščiai.html
@@ -10,7 +10,7 @@
     <H1>šaltibarščiai</H1>
     <img src="./saltibarsciai.jpg" alt="šaltibarščiai">
     <p>
-    <em><strong>Šaltibarščiai</strong></em> - cold summer soup based on beets and milk.         
+    <strong>Šaltibarščiai</strong>- cold summer soup based on beets and milk.         
     </p>
     <H1>Ingredients</H1>
     <h3>For the Soup</h3>
@@ -20,7 +20,18 @@
         <li>6 spring onions or 10 green onion leaves</li>
         <li>2 hard-boiled eggs</li>
         <li>1.5 litres or 3 pints kefir (or 500 ml or 1 pint thick natural yoghurt and 1 litre or 2 pints buttermilk)</li>
+        <li>Bunch fresh dill</li>
+        <li>Juice of ½ a lemon (optional)</li>
+        <li>Salt to taste </li>
     </ul>
+    <h3>For the Side Dish</h3>
+    <ul>
+        <li>
+            200 g or 7 oz potatoes 
+        </li>
+    </ul>
+    <h3>How to make <strong>Šaltibarščiai</strong> video </h3>
+    <a href="https://www.youtube.com/watch?v=TpauWoJfBCM">How to make Cold Beet Soup</a>
      
 </body>
 </html>
