Initial commit of all files to the repository

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
 <ul>    
- <a href="./recipes/cepelinai/cepelinai.html">cepelinai</a>
- <a href="./recipes/šaltibarsiai/šaltibarščiai.html">šaltibarščiai</a>
- <a href="./recipes/zemaiciu_blynai/zemaiciu_blynai.html">žemaičių blynai</a>
+    <li><a href="./recipes/cepelinai/cepelinai.html">cepelinai</a></li>
+ 
+    <li><a href="./recipes/šaltibarsiai/šaltibarščiai.html">šaltibarščiai</a></li>
+ 
+    <li><a href="./recipes/zemaiciu_blynai/zemaiciu_blynai.html">žemaičių blynai</a></li>
 </ul>
 
     
