--- a/recipes/cepelinai/cepelinai.html
+++ b/recipes/cepelinai/cepelinai.html
@@ -41,7 +41,36 @@
         <li>Freshly ground black pepper, to taste</li>
         <li>1 to 2 tablespoons milk, as needed</li>
     </ul>
-    <h3>How to make <strong>Cepilinai</strong> video.</h3>
+    <h1>Method</h1>
+    <h3>For the meat filling</h3>
+    <ol>
+        <li>In a large bowl, mix together ground meat, finely chopped onion, the salt, a few grinds of pepper, and the egg until well combined. </li>
+        <li>Cover and refrigerate until ready to use. </li>
+    </ol>
+    <h3>For the Dumplings</h3>
+    <ol>
+        <li><p>Add the lemon juice to the raw grated potatoes so they don't turn brown.</li></p>
+        <li><p>lace them in a fine-mesh cheesecloth or cotton dishtowel, and twist over a large bowl to get rid of the excess water.</li></p>
+        <li><p>our off the water, reserving the potato starch at the bottom of the bowl.</li></p>
+        <li><p>Unwrap the cheesecloth and place the raw potatoes in the bowl with the potato starch you reserved from the bottom of the bowl.</li></p>
+        <li><p>Add the cooked riced potatoes, grated onion, and the salt, more to taste. Mix well.</li></p>
+        <li><p>Put a large stockpot of well-salted water on to boil.</li></p>
+        <li><p>To form the zeppelins, take about 1 cup of dumpling mixture and pat it flat in the palm of the hand.</li></p>
+        <li><p>Place 1/4 cup or more of meat mixture in the center and, using slightly dampened hands, fold the potato mixture around the meat into a football shape, sealing well. Continue until both mixtures are used.</li></p>
+    </ol>
+    <h3>For cooking the Dumplings</h3>
+    <ol>
+        <li><p>Carefully lower dumplings (in batches if necessary to prevent crowding) into salted, boiling water to which 1 tablespoon of cornstarch has been added (to prevent dumplings from falling apart).</li></p>
+        <li><p>Remove dumplings with a slotted spoon or strainer, drain briefly on a clean dish towel and place on a heated platter.</li></p>
+    </ol>
+    <h3>For the Gravy</h3>
+    <ol>
+        <li><p>While the dumplings are boiling, make the gravy. In a medium skillet, fry the bacon and chopped onion until tender.</li></p>
+        <li><p>Drain and combine with sour cream and black pepper. Thin with 1 to 2 tablespoons milk if necessary.</li></p>
+        <li><p>Ladle the gravy over the dumplings or pass the gravy at the table.</li></p>
+    </ol>
+
+    <h2>How to make <strong>Cepilinai</strong> video.</h2>
     <a href="https://www.youtube.com/watch?v=U4MIGb0fwZQ">How to make Cepelinai.</a>
 
 </body>
