--- a/recipes/šaltibarsiai/šaltibarščiai.html
+++ b/recipes/šaltibarsiai/šaltibarščiai.html
@@ -30,7 +30,20 @@
             200 g or 7 oz potatoes 
         </li>
     </ul>
-    <h3>How to make <strong>Šaltibarščiai</strong> video </h3>
+    <h1>Method</h1>
+    <ol>
+        <li><p>Peel the potatoes and chop into bite-sized pieces. Place in a saucepan of boiling water, add a good pinch of salt and boil until a knife can easily pierce the flesh.</p></li>
+        <li><p>While the potatoes are boiling, assemble the soup.</p></li>
+        <li><p>Slice the beetroot & gherkins into fine julienne.</p></li>
+        <li><p>Chop the eggs into small dice.</p></li>
+        <li><p>Chop the scallions or onions leaves into 1 cm (½ inch) pieces.</p></li>
+        <li><p>Finely chop the dill.</p></li>
+        <li><p>Pour the kefir into a large bowl or saucepan and add the chopped ingredients and half of the lemon juice, holding back some of the dill for garnish.</p></li>
+        <li><p>Taste and season salt and additional lemon juice as required.</p></li>
+        <li><p>Ladle the soup into bowls and sprinkle with the remaining dill.</p></li>
+        <li><p>Serve the potatoes on a side plate so that they do not heat the soup.</p></li>
+    </ol>
+    <h2>How to make <strong>Šaltibarščiai</strong> video </h2>
     <a href="https://www.youtube.com/watch?v=TpauWoJfBCM">How to make Cold Beet Soup</a>
      
 </body>
