--- a/recipes/cepelinai/cepelinai.html
+++ b/recipes/cepelinai/cepelinai.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cepelinai</title>
+    <style>
+        p, a, li, h1, h2, h3 {font: 1em sans-serif;}
+        h1, h2, h3 {font-size: x-large;}
+    </style>
 </head>
 <body>
     <h1>Cepelinai </h1>
-    <img src="/recipes/cepelinai/cepelinai-80268533.jpg" alt="Cepelianai">
+    <img src="/recipes/cepelinai/cepelinai-80268533.jpg" alt="Cepelianai" height="auto" width="500px">
     <p>
         <strong>Cepelinai </strong> or <strong>didzkukuliai</strong> are potato dumplings.
         It has been described as a national dish of Lithuania
