--- a/recipes/šaltibarsiai/šaltibarščiai.html
+++ b/recipes/šaltibarsiai/šaltibarščiai.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>šaltibarščiai</title>
+    <style>
+        li, p, h1, h2, h3, a {font: 1em sans-serif;}
+        h1, h2, h3 {font-size: x-large;}
+    </style>
 </head>
 <body>
     <H1>šaltibarščiai</H1>
-    <img src="./saltibarsciai.jpg" alt="šaltibarščiai">
+    <img src="./saltibarsciai.jpg" alt="šaltibarščiai" height="auto" width="500px">
     <p>
     <strong>Šaltibarščiai</strong>- cold summer soup based on beets and milk.         
     </p>
