--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CŠŽ site</title>
+    <style>
+        a {font: 1em sans-serif;}
+    </style>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./gustavo-sefas.jpg" alt="Gustavo Sefas" height="auto" width="600px">
 <ul>    
     <li><a href="./recipes/cepelinai/cepelinai.html">cepelinai</a></li>
+    <img src="./recipes/cepelinai/cepelinai-80268533.jpg" alt="cepelinai" height="auto" width="400px">
  
     <li><a href="./recipes/šaltibarsiai/šaltibarščiai.html">šaltibarščiai</a></li>
- 
+    <img src="recipes/šaltibarsiai/saltibarsciai.jpg" alt="Šaltibarščiai" height="auto" width="400px"> 
+
     <li><a href="./recipes/zemaiciu_blynai/zemaiciu_blynai.html">žemaičių blynai</a></li>
+    <img src="./recipes/zemaiciu_blynai/zemaiciu_blynai.jpg" alt="žemaičių blynai" height="auto" width="400px">
 </ul>
 
     
