--- a/recipes/zemaiciu_blynai/zemaiciu_blynai.html
+++ b/recipes/zemaiciu_blynai/zemaiciu_blynai.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Žemaičių blynai</title>
+    <style>
+        li, p, a, h1, h2, h3 {font: 1em sans-serif;}
+        h1, h2, h3 {font-size: x-large;}
+    </style>
 </head>
 <body>
     <h1>Žemaičių blynai</h1>
-    <img src="./zemaiciu_blynai.jpg" alt="Žemaičių blynai">
+    <img src="./zemaiciu_blynai.jpg" alt="Žemaičių blynai" height="auto" width="500px">
     <p>
         <strong>Žemaičių blynai</strong>, and the name translates to Samogitian pancakes. These flat potato pancakes are made from eggs, salt, and coarsely mashed, riced, or grated potatoes, and they're filled with carrots or meat. The filling is often made with diced pork, eggs, and pepper.
     </p>
