I commited all recipe html's because i modified each recipe html page, by adding a back home link/button

--- a/recipes/cepelinai/cepelinai.html
+++ b/recipes/cepelinai/cepelinai.html
@@ -76,6 +76,6 @@
 
     <h2>How to make <strong>Cepilinai</strong> video.</h2>
     <a href="https://www.youtube.com/watch?v=U4MIGb0fwZQ">How to make Cepelinai.</a>
-
+    <h1><a href="/index.html">Home Page</a></h1>
 </body>
 </html>
