--- a/recipes/šaltibarsiai/šaltibarščiai.html
+++ b/recipes/šaltibarsiai/šaltibarščiai.html
@@ -49,6 +49,6 @@
     </ol>
     <h2>How to make <strong>Šaltibarščiai</strong> video </h2>
     <a href="https://www.youtube.com/watch?v=TpauWoJfBCM">How to make Cold Beet Soup</a>
-     
+    <h1><a href="/index.html">Home Page</a></h1>
 </body>
 </html>
