--- a/recipes/zemaiciu_blynai/zemaiciu_blynai.html
+++ b/recipes/zemaiciu_blynai/zemaiciu_blynai.html
@@ -52,7 +52,7 @@
     </ol>       
     <h2>How to make žemaičių blynai video</h2>
     <a href="https://www.youtube.com/watch?v=mLUKG9oMJKQ">How to make žemaičių blynai video</a>
-
+    <h1><a href="/index.html">Home Page</a></h1>
 
 </body>
 </html>
