--- a/recipes/cepelinai/cepelinai.html
+++ b/recipes/cepelinai/cepelinai.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cepelinai</title>
-    <style>
-        p, a, li, h1, h2, h3 {font: 1em sans-serif;}
-        h1, h2, h3 {font-size: x-large;}
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Cepelinai </h1>
+    <div id="title"><h2>Cepelinai </h2></div>
     <img src="/recipes/cepelinai/cepelinai-80268533.jpg" alt="Cepelianai" height="auto" width="500px">
     <p>
         <strong>Cepelinai </strong> or <strong>didzkukuliai</strong> are potato dumplings.
-        It has been described as a national dish of Lithuania
+        It has been described as a national dish of Lithuania.
     </p>
     <h1>Ingredients</h1>
     <h3>For the Meat Filling</h3>
@@ -48,8 +45,8 @@
     <h1>Method</h1>
     <h3>For the meat filling</h3>
     <ol>
-        <li>In a large bowl, mix together ground meat, finely chopped onion, the salt, a few grinds of pepper, and the egg until well combined. </li>
-        <li>Cover and refrigerate until ready to use. </li>
+        <li><p>In a large bowl, mix together ground meat, finely chopped onion, the salt, a few grinds of pepper, and the egg until well combined. </li></p>
+        <li><p>Cover and refrigerate until ready to use. </li></p>
     </ol>
     <h3>For the Dumplings</h3>
     <ol>
@@ -76,6 +73,6 @@
 
     <h2>How to make <strong>Cepilinai</strong> video.</h2>
     <a href="https://www.youtube.com/watch?v=U4MIGb0fwZQ">How to make Cepelinai.</a>
-    <h1><a href="/index.html">Home Page</a></h1>
+    <h3><a href="/index.html">Home Page</a></h3>
 </body>
 </html>
