--- a/recipes/zemaiciu_blynai/zemaiciu_blynai.html
+++ b/recipes/zemaiciu_blynai/zemaiciu_blynai.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Žemaičių blynai</title>
-    <style>
-        li, p, a, h1, h2, h3 {font: 1em sans-serif;}
-        h1, h2, h3 {font-size: x-large;}
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Žemaičių blynai</h1>
+    <div id="title"><h2>Žemaičių blynai</h2></div>
     <img src="./zemaiciu_blynai.jpg" alt="Žemaičių blynai" height="auto" width="500px">
     <p>
         <strong>Žemaičių blynai</strong>, and the name translates to Samogitian pancakes. These flat potato pancakes are made from eggs, salt, and coarsely mashed, riced, or grated potatoes, and they're filled with carrots or meat. The filling is often made with diced pork, eggs, and pepper.
     </p>
-    <h1>Ingredients</h1>
+    <h2>Ingredients</h2>
     <h3>For the pancakes</h3>
     <ul>
         <li>6 cooked potatoes</li>
@@ -29,7 +26,7 @@
         <li>¼ tsp pepper, pinch of salt</li>
         <li>Oil for frying.</li>
     </ul>
-    <h1>Method</h1>
+    <h2>Method</h2>
     <ol>
         <li><p>Cook the potatoes in their skins in salted water, cool until you can handle them, then peel the skin off.</p></li>
         <li><p>Rice, mash or grate the potatoes.</p></li>
@@ -37,7 +34,7 @@
         <li><p>Mix with a wooden spoon, then when the egg is absorbed, knead with your hands until the mixture is no longer sticky.</li>
         <li><p>You can knead it on a board with a little additional flour, but too much will affect the taste.</p></li>    
     </ol>
-    <h3>To prepare the filling</h3>
+    <h2>To prepare the filling</h2>
     <ol>
     
         <li><p>Simmer the diced pork in a little salted water for about 10 minutes, until cooked. Skim the scum off the water, drain, then process the meat until it is finely minced. Her mother used to grate the cooked meat which, shreds it very finely.</p></li>
@@ -50,9 +47,9 @@
 
         <li><p>Serve the pancakes with the bacon and onion mix and a dollop of sour cream.</p></li>
     </ol>       
-    <h2>How to make žemaičių blynai video</h2>
+    <h2>How to make <strong>žemaičių blynai</strong> video</h2>
     <a href="https://www.youtube.com/watch?v=mLUKG9oMJKQ">How to make žemaičių blynai video</a>
-    <h1><a href="/index.html">Home Page</a></h1>
+    <h3><a href="/index.html">Home Page</a></h3>
 
 </body>
 </html>
