--- a/recipes/šaltibarsiai/šaltibarščiai.html
+++ b/recipes/šaltibarsiai/šaltibarščiai.html
@@ -5,18 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>šaltibarščiai</title>
-    <style>
-        li, p, h1, h2, h3, a {font: 1em sans-serif;}
-        h1, h2, h3 {font-size: x-large;}
-    </style>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <H1>šaltibarščiai</H1>
+    <div id="title"><h2>Šaltibarščiai</h2></div>
     <img src="./saltibarsciai.jpg" alt="šaltibarščiai" height="auto" width="500px">
     <p>
     <strong>Šaltibarščiai</strong>- cold summer soup based on beets and milk.         
     </p>
-    <H1>Ingredients</H1>
+    <h2>Ingredients</h2>
     <h3>For the Soup</h3>
     <ul>
         <li>200g or 7 oz boiled & cooled beetroot (about 2 medium beets)</li>
@@ -34,7 +31,7 @@
             200 g or 7 oz potatoes 
         </li>
     </ul>
-    <h1>Method</h1>
+    <h2>Method</h2>
     <ol>
         <li><p>Peel the potatoes and chop into bite-sized pieces. Place in a saucepan of boiling water, add a good pinch of salt and boil until a knife can easily pierce the flesh.</p></li>
         <li><p>While the potatoes are boiling, assemble the soup.</p></li>
@@ -49,6 +46,6 @@
     </ol>
     <h2>How to make <strong>Šaltibarščiai</strong> video </h2>
     <a href="https://www.youtube.com/watch?v=TpauWoJfBCM">How to make Cold Beet Soup</a>
-    <h1><a href="/index.html">Home Page</a></h1>
+    <h3><a href="/index.html">Home Page</a></h3>
 </body>
 </html>
